<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_reading_note_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="24dp"
    android:background="@drawable/background_reading_note">

    <TextView
        android:id="@+id/text_reading_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/poppins"
        android:includeFontPadding="false"
        android:text="@string/reading_text"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/start_reading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/poppins"
        android:includeFontPadding="false"
        android:text="@string/start_reading"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorIcons"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="8dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_reading_text"
        app:layout_constraintEnd_toEndOf="@+id/text_reading_text"/>

    <TextView
        android:id="@+id/stop_reading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/poppins"
        android:includeFontPadding="false"
        android:text="@string/stop_reading"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorDelete"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="8dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_reading_text"
        app:layout_constraintEnd_toStartOf="@+id/start_reading"/>

</androidx.constraintlayout.widget.ConstraintLayout>