<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_add_url_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="24dp"
    android:background="@drawable/background_add_url_dialog">

    <ImageView
        android:id="@+id/image_url"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="12dp"
        android:src="@drawable/ic_web_link"
        android:scaleType="centerCrop"
        android:tint="@color/colorIcons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/text_add_url"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins"
        android:includeFontPadding="false"
        android:text="@string/add_url"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/image_url"
        app:layout_constraintStart_toEndOf="@+id/image_url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_url" />

    <EditText
        android:id="@+id/input_url"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:theme="@style/EditTextAppearance"
        android:background="@null"
        android:fontFamily="@font/poppins"
        android:includeFontPadding="false"
        android:hint="@string/enter_url"
        android:gravity="center_vertical"
        android:inputType="textUri"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorTextHint"
        android:textSize="14sp"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_url"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/dialog_add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/poppins"
        android:includeFontPadding="false"
        android:text="@string/add"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="8dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_url"
        app:layout_constraintEnd_toEndOf="@+id/input_url"/>

    <TextView
        android:id="@+id/dialog_cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/poppins"
        android:includeFontPadding="false"
        android:text="@string/cancel"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="8dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_url"
        app:layout_constraintEnd_toStartOf="@+id/dialog_add_btn"/>

</androidx.constraintlayout.widget.ConstraintLayout>